实现分页功能(大更新)

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -2,11 +2,22 @@
     margin: 30px;
 }
 
-.btn-publish{
-    float:right;
+.btn-publish {
+    float: right;
     margin-bottom: 15px;
 }
 
-.alert-publish{
+.alert-publish {
     padding: 10px;
+}
+
+.media-object {
+    width: 38px;
+    height: 38px;
+}
+
+.text-desc {
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
 }
