--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/community.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
@@ -14,7 +15,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Crits</span>
             </button>
-            <a class="navbar-brand" href="#">Crits</a>
+            <a class="navbar-brand" href="/">Crits</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left">
@@ -40,6 +41,64 @@
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
+
+    <div class="container-fluid" style="background-color: #efefef">
+        <div class="row main">
+            <div class="container-fluid col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"  >
+                <div class="row" style="background-color: white">
+                    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12"  >
+
+                        <h4><span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> 发现</h4>
+                        <hr>
+                        <div class="media" th:each="question : ${pagination.questions}">
+                            <div class="media-left">
+                                <a href="">
+                                    <img class="media-object img-rounded" th:src="${question.user.getAvatarUrl()}">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                                <span th:text="${question.getDescription()}"></span> <br>
+                                <span class="text-desc">• <span th:text="${question.getCommentCount()}"></span> 个评论 • <span th:text="${question.getViewCount()}"></span> 次浏览 • <span th:text="${#dates.format(question.getGmtCreate(), 'yyyy-MM-dd HH:mm')}"></span></span>
+                            </div>
+                        </div>
+
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination">
+                                <li th:if="${pagination.showFirstPage}">
+                                    <a href="#" aria-label="Previous" th:href="@{/(page=${1})}">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li th:if="${pagination.showPrevious}" >
+                                    <a href="#" aria-label="Previous" th:href="@{/(page=${currentPage - 1})}">
+                                        <span aria-hidden="true">&lt;</span>
+                                    </a>
+                                </li>
+                                <li th:each="page : ${pagination.pages}" th:class="${currentPage == page} ? 'active' : ''" >
+                                    <a href="#" th:text="${page}" th:href="@{/(page=${page})}" ></a>
+                                </li>
+                                <li th:if="${pagination.showNext}">
+                                    <a href="#" aria-label="Previous" th:href="@{/(page=${currentPage + 1})}">
+                                        <span aria-hidden="true">&gt;</span>
+                                    </a>
+                                </li>
+                                <li th:if="${pagination.showLastPage}">
+                                    <a href="#" aria-label="Previous" th:href="@{/(page=${totalPage})}">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </nav>
+
+                    </div>
+                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
+                        <h4>热门话题</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
