问题详情界面和退出登录

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -21,3 +21,11 @@
     font-weight: normal;
     color: #999;
 }
+
+.profile .section {
+    margin-top: 100px;
+}
+
+.community-menu {
+    color: #999
+}
