--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,9 @@
                                 </a>
                             </div>
                             <div class="media-body">
-                                <h4 class="media-heading" th:text="${question.getTitle()}"></h4>
+                                <h4 class="media-heading" >
+                                    <a th:text="${question.getTitle()}" th:href="@{'/question/'+${question.id}}"></a>
+                                </h4>
                                 <span th:text="${question.getDescription()}"></span> <br>
                                 <span class="text-desc">• <span th:text="${question.getCommentCount()}"></span> 个评论 • <span th:text="${question.getViewCount()}"></span> 次浏览 • <span th:text="${#dates.format(question.getGmtCreate(), 'yyyy-MM-dd HH:mm')}"></span></span>
                             </div>
