--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -23,6 +23,7 @@
                         <hr>
 
                         <form action="/publish" method="post">
+                            <input type="hidden" name="id", th:value="${id}">
                             <div class="form-group">
                                 <label for="title">问题标题（简单扼要）：</label>
                                 <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题......">
