--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -2,12 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title th:text="${question.title}"></title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js" type="application/javascript"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -16,29 +17,53 @@
 
     <div class="container-fluid" style="background-color: #efefef">
         <div class="row main profile">
-            <div class="container-fluid col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"  >
+            <div class="container-fluid col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
                 <div class="row" style="background-color: white">
-                    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
-
-                        <h3><span th:text="${question.title}"></span></h3>
-                        <span class="text-desc">
+                    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h3><span th:text="${question.title}"></span></h3>
+                            <span class="text-desc">
                             <span><a href="/">Crits</a></span> |作者
-                            <span class="text-desc" th:text="${question.user.name}" th:href="@{'github.com/' + ${question.user.name}}"></span> |
+                            <span class="text-desc" th:text="${question.user.name}"
+                                  th:href="@{'github.com/' + ${question.user.name}}"></span> |
                             <span th:text="${#dates.format(question.getGmtCreate(), 'yyyy-MM-dd HH:mm')}"></span> |阅读数：
                             <span th:text="${question.getViewCount()}"></span>
                         </span>
-                        <hr>
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
-                        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <a th:href="@{'/publish/'+${question.id}}" style="color: #999; font-size: 12px;" th:if="${session.user != null && session.user.accountId == session.user.accountId}">
-                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                            编辑
-                        </a>
+                            <hr>
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                                 th:text="${question.description}"></div>
+                            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <a th:href="@{'/publish/'+${question.id}}" style="color: #999; font-size: 12px;"
+                               th:if="${session.user != null && session.user.accountId == session.user.accountId}">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                                编辑
+                            </a>
+                        </div>
 
+                        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                            <div class="media col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                <div class="media-left">
+                                    <a href="#">
+                                        <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                    </a>
+                                </div>
+                                <div class="media-body" style="padding-top: 8px;" >
+                                    <span th:text="${question.user.name}"></span>
+                                </div>
+                            </div>
+
+                            <div class="media col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin: 10px 0 10px 0">
+                                <input type="hidden" id="question_id" th:value="${question.id}">
+                                <textarea class="form-control" rows="6" id="comment_content"></textarea>
+                                <button type="button" class="btn btn-success" style="float: right; margin-top: 10px" onclick="post()">回复 </button>
+                            </div>
+
+                        </div>
 
 
                     </div>
-                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
+                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <h4>发起人</h4>
                         </div>
@@ -49,7 +74,7 @@
                                     <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
                                 </a>
                             </div>
-                            <div class="media-body">
+                            <div class="media-body" >
                                 <span th:text="${question.user.name}"></span>
                             </div>
                         </div>
