--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -28,16 +28,41 @@
                                   th:href="@{'github.com/' + ${question.user.name}}"></span> |
                             <span th:text="${#dates.format(question.getGmtCreate(), 'yyyy-MM-dd HH:mm')}"></span> |阅读数：
                             <span th:text="${question.getViewCount()}"></span>
-                        </span>
+                            </span>
                             <hr>
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"
                                  th:text="${question.description}"></div>
                             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <a th:href="@{'/publish/'+${question.id}}" style="color: #999; font-size: 12px;"
+                            <a th:href="@{'/publish/'+${question.id}}" style="color: #999; font-size: 12px; margin-bottom: 15px; display: block; "
                                th:if="${session.user != null && session.user.accountId == session.user.accountId}">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 编辑
                             </a>
+                        </div>
+
+                        <h4>
+                            <span th:text="${question.commentCount}" style="margin-left: 30px"></span> 个回复
+                        </h4>
+                        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 0">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:each="comment : ${comments}">
+                            <div class="media col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-bottom: 15px;">
+                                <div class="media-left">
+                                    <a href="#">
+                                        <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}">
+                                    </a>
+                                </div>
+                                <div class="media-body" style="padding-top: 8px;">
+                                    <h5>
+                                        <span th:text="${comment.user.name}"></span>
+                                    </h5>
+
+                                    <div th:text="${comment.getContent()}"></div>
+                                    <div>
+                                        <span class="glyphicon glyphicon-thumbs-up"></span>
+                                        <span class="pull-right" style="color: #999; cursor: pointer;" th:text="${#dates.format(comment.getGmtCreate(), 'yyyy-MM-dd')}"></span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                         <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -45,18 +70,20 @@
                             <div class="media col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                 <div class="media-left">
                                     <a href="#">
-                                        <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                        <img class="media-object img-rounded" th:src="${session.user != null ? session.user.avatarUrl : '/images/default.png'}">
                                     </a>
                                 </div>
-                                <div class="media-body" style="padding-top: 8px;" >
-                                    <span th:text="${question.user.name}"></span>
+                                <div class="media-body" style="padding-top: 8px;">
+                                    <span th:text="${session.user != null ? session.user.name : '未登录'}  "></span>
                                 </div>
                             </div>
 
                             <div class="media col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin: 10px 0 10px 0">
                                 <input type="hidden" id="question_id" th:value="${question.id}">
                                 <textarea class="form-control" rows="6" id="comment_content"></textarea>
-                                <button type="button" class="btn btn-success" style="float: right; margin-top: 10px" onclick="post()">回复 </button>
+                                <button type="button" class="btn btn-success" style="float: right; margin-top: 10px"
+                                        onclick="post()">回复
+                                </button>
                             </div>
 
                         </div>
@@ -74,7 +101,7 @@
                                     <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
                                 </a>
                             </div>
-                            <div class="media-body" >
+                            <div class="media-body">
                                 <span th:text="${question.user.name}"></span>
                             </div>
                         </div>
